[package]
name = "rtcp"
version.workspace = true
authors = ["Rain Liu <yliu@webrtc.rs>", "Michael Uti <utimichael9@gmail.com>"]
edition.workspace = true
description = "A pure Rust implementation of RTCP"
license.workspace = true
documentation = "https://docs.rs/rtcp"
homepage.workspace = true
repository = "https://github.com/webrtc-rs/webrtc/tree/master/rtcp"

[dependencies]
util = { workspace = true, default-features = false, features = ["marshal"] }

bytes = "1"
thiserror = "1"
