[package]
name = "rtp"
version = "0.6.8"
authors = ["Rain Liu <yliu@webrtc.rs>", "Michael Uti <utimichael9@gmail.com>"]
edition = "2021"
description = "A pure Rust implementation of RTP"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/rtp"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/rtp"
rust-version = "1.63.0"

[dependencies]
util = { version = "0.7.0", path = "../util", package = "webrtc-util", default-features = false, features = ["marshal", "sync"] }

bytes = "1"
rand = "0.8.5"
thiserror = "1.0"
serde = { version = "1.0.102", features = ["derive"] }

[dev-dependencies]
chrono = "0.4.23"
criterion = "0.4.0"

[[bench]]
name = "packet_bench"
harness = false
