[package]
name = "rtp"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "A pure Rust implementation of RTP"
license.workspace = true
documentation = "https://docs.rs/rtp"
homepage.workspace = true
repository = "https://github.com/webrtc-rs/webrtc/tree/master/rtp"

[dependencies]
util = { workspace = true, default-features = false, features = ["marshal"] }

bytes = "1"
rand = "0.9"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
portable-atomic = "1.6"

memchr = "2.1.1"

[dev-dependencies]
chrono = "0.4.28"
criterion = "0.5"

[[bench]]
name = "packet_bench"
harness = false
