[package]
name = "sctp-async"
version = "0.0.0"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2018"
description = "Async implementation for the SCTP protocol"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/sctp-async"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/sctp"
keywords = ["sctp"]
categories = [ "network-programming", "asynchronous" ]
workspace = ".."
readme = "../README.md"

[features]
default = ["lock_tracking"]
# Records how long locks are held, and warns if they are held >= 1ms
lock_tracking = []

[dependencies]
bytes = "1.1.0"
futures-util = { version = "0.3.11", default-features = false, features = ["io"] }
futures-channel = "0.3.11"
fxhash = "0.2.1"
proto = { package = "sctp-proto", path = "../sctp-proto", version = "0.1.1" }
thiserror = "1.0.21"
log = "0.4.14"
tokio = { version = "1.15.0", features = ["rt", "time", "net"] }

[dev-dependencies]
anyhow = "1.0.22"
crc = "2"
bencher = "0.1.5"
directories-next = "2"
futures-util = { version = "0.3.11", default-features = false, features = ["async-await-macro"] }
rand = "0.8"
tokio = { version = "1.15.0", features = ["rt", "rt-multi-thread", "time", "macros", "sync", "signal"] }
tokio-test = "0.4.2"
lazy_static = "1.4.0"
env_logger = "0.9.0"
chrono = "0.4.19"
clap = "2.34.0"

[[example]]
name = "ping"

[[example]]
name = "pong"
