[package]
name = "webrtc-sctp"
version = "0.9.0"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2021"
description = "A pure Rust implementation of SCTP"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/webrtc-sctp"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/sctp"

[dependencies]
util = { version = "0.8", path = "../util", package = "webrtc-util", default-features = false, features = ["conn"] }

arc-swap = "1"
tokio = { version = "1.32.0", features = ["full"] }
bytes = "1"
rand = "0.8"
crc = "3"
async-trait = "0.1"
log = "0.4"
thiserror = "1"

[dev-dependencies]
tokio-test = "0.4"
lazy_static = "1"
env_logger = "0.10"
chrono = "0.4.28"
clap = "3"

[[example]]
name = "ping"
path = "examples/ping.rs"
bench = false

[[example]]
name = "pong"
path = "examples/pong.rs"
bench = false
