[package]
name = "webrtc-sctp"
version = "0.10.0"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2021"
description = "A pure Rust implementation of SCTP"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/webrtc-sctp"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/webrtc/tree/master/sctp"

[dependencies]
util = { version = "0.9.0", path = "../util", package = "webrtc-util", default-features = false, features = ["conn"] }

arc-swap = "1"
tokio = { version = "1.32.0", features = [
    "fs",
    "io-util",
    "io-std",
    "macros",
    "net",
    "parking_lot",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
bytes = "1"
rand = "0.8"
crc = "3.2.1"
async-trait = "0.1"
log = "0.4"
thiserror = "1"
portable-atomic = "1.6"

[dev-dependencies]
tokio-test = "0.4"
lazy_static = "1"
env_logger = "0.11.3"
chrono = "0.4.28"
clap = "3"

[[example]]
name = "ping"
path = "examples/ping.rs"
bench = false

[[example]]
name = "pong"
path = "examples/pong.rs"
bench = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
