[package]
name = "webrtc-sctp"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "A pure Rust implementation of SCTP"
license.workspace = true
documentation = "https://docs.rs/webrtc-sctp"
homepage.workspace = true
repository = "https://github.com/webrtc-rs/webrtc/tree/master/sctp"

[dependencies]
util = { workspace = true, default-features = false, features = ["conn"] }

arc-swap = "1"
tokio = { version = "1.32.0", features = [
    "fs",
    "io-util",
    "io-std",
    "macros",
    "net",
    "parking_lot",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
bytes = "1"
rand = "0.9"
crc = "3.2.1"
async-trait = "0.1"
log = "0.4"
thiserror = "1"
portable-atomic = "1.6"

[dev-dependencies]
lazy_static = "1"
env_logger = "0.11.3"
chrono = "0.4.28"
clap = "3"

[[example]]
name = "ping"
path = "examples/ping.rs"
bench = false

[[example]]
name = "pong"
path = "examples/pong.rs"
bench = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
