[package]
name = "sdp"
version = "0.6.2"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2021"
description = "A pure Rust implementation of SDP"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sdp"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/webrtc/tree/master/sdp"

[dependencies]
url = "2"
rand = "0.8"
thiserror = "1"
substring = "1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench"
harness = false
