[package]
name = "sdp"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "A pure Rust implementation of SDP"
license.workspace = true
documentation = "https://docs.rs/sdp"
homepage.workspace = true
repository = "https://github.com/webrtc-rs/webrtc/tree/master/sdp"

[dependencies]
url = "2"
rand = "0.9"
thiserror = "1"
substring = "1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench"
harness = false
