[package]
name = "webrtc-srtp"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "A pure Rust implementation of SRTP"
license.workspace = true
documentation = "https://docs.rs/webrtc-srtp"
homepage.workspace = true
repository = "https://github.com/webrtc-rs/webrtc/tree/master/srtp"

[features]
openssl = ["dep:openssl"]
vendored-openssl = ["openssl/vendored"]

[dependencies]
util = { workspace = true, default-features = false, features = [
    "conn",
    "buffer",
    "marshal",
] }
rtp.workspace = true
rtcp.workspace = true

byteorder = "1"
bytes = "1"
thiserror = "1"
hmac = { version = "0.12", features = ["std"] }
sha1 = "0.10"
ctr = "0.9"
aes = "0.8"
subtle = "2"
tokio = { version = "1.32.0", features = [
    "fs",
    "io-util",
    "io-std",
    "macros",
    "net",
    "parking_lot",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
log = "0.4"
aead = { version = "0.5", features = ["std"] }
aes-gcm = { version = "0.10", features = ["std"] }
openssl = { version = "0.10.72", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_futures"] }
lazy_static = "1"

[[bench]]
name = "srtp_bench"
harness = false
