[package]
name = "stun"
version = "0.5.0"
authors = ["Rain Liu <yuliu@webrtc.rs>"]
edition = "2021"
description = "A pure Rust implementation of STUN"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/stun"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/stun"

[features]
default = []
bench = []

[dependencies]
util = { version = "0.8", path = "../util", package = "webrtc-util", default-features = false, features = ["conn"] }

tokio = { version = "1.32.0", features = ["full"] }
lazy_static = "1"
url = "2"
rand = "0.8"
base64 = "0.21"
subtle = "2.4"
crc = "3"
ring = "0.16"
md-5 = "0.10"
thiserror = "1"

[dev-dependencies]
tokio-test = "0.4"
clap = "3"
criterion = "0.5"


[[bench]]
name = "bench"
harness = false

[[example]]
name = "stun_client"
path = "examples/stun_client.rs"
bench = false

[[example]]
name = "stun_decode"
path = "examples/stun_decode.rs"
bench = false
