[package]
name = "stun"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "A pure Rust implementation of STUN"
license.workspace = true
documentation = "https://docs.rs/stun"
homepage.workspace = true
repository = "https://github.com/webrtc-rs/webrtc/tree/master/stun"

[features]
default = []
bench = []

[dependencies]
util = { workspace = true, default-features = false, features = ["conn"] }

tokio = { version = "1.32.0", features = [
    "fs",
    "io-util",
    "io-std",
    "macros",
    "net",
    "parking_lot",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
lazy_static = "1"
url = "2"
rand = "0.9"
base64 = "0.22.1"
subtle = "2.4"
crc = "3"
ring = "0.17.14"
md-5 = "0.10"
thiserror = "1"

[dev-dependencies]
clap = "3"
criterion = "0.5"

[[bench]]
name = "bench"
harness = false

[[example]]
name = "stun_client"
path = "examples/stun_client.rs"
bench = false

[[example]]
name = "stun_decode"
path = "examples/stun_decode.rs"
bench = false
