[package]
name = "turn"
version = "0.7.0"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2021"
description = "A pure Rust implementation of TURN"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/turn"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/turn"

[dependencies]
util = { version = "0.8", path = "../util", package = "webrtc-util", default-features = false, features = ["conn", "vnet"] }
stun = { version = "0.5", path = "../stun" }

tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
log = "0.4"
base64 = "0.21"
rand = "0.8"
ring = "0.16"
md-5 = "0.10"
thiserror = "1"

[dev-dependencies]
tokio-test = "0.4"
env_logger = "0.10"
chrono = "0.4.28"
hex = "0.4"
clap = "3"
criterion = "0.5"

[features]
metrics = []

[[bench]]
name = "bench"
harness = false

[[example]]
name = "turn_client_udp"
path = "examples/turn_client_udp.rs"
bench = false

[[example]]
name = "turn_server_udp"
path = "examples/turn_server_udp.rs"
bench = false
