[package]
name = "turn"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "A pure Rust implementation of TURN"
license.workspace = true
documentation = "https://docs.rs/turn"
homepage.workspace = true
repository = "https://github.com/webrtc-rs/webrtc/tree/master/turn"

[dependencies]
util = { workspace = true, default-features = false, features = ["conn", "vnet"] }
stun.workspace = true

tokio = { version = "1.32.0", features = [
    "fs",
    "io-util",
    "io-std",
    "macros",
    "net",
    "parking_lot",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"
log = "0.4"
base64 = "0.22.1"
rand = "0.9"
ring = "0.17.14"
md-5 = "0.10"
thiserror = "1"
portable-atomic = "1.6"

[dev-dependencies]
env_logger = "0.11.3"
hex = "0.4"
clap = "3"
criterion = "0.5"

[features]
metrics = []

[[bench]]
name = "bench"
harness = false

[[example]]
name = "turn_client_udp"
path = "examples/turn_client_udp.rs"
bench = false

[[example]]
name = "turn_server_udp"
path = "examples/turn_server_udp.rs"
bench = false
