[package]
name = "webrtc-util"
version = "0.9.0"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2021"
description = "Utilities for WebRTC.rs stack"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/webrtc-util"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/webrtc/tree/master/util"

[features]
default = ["buffer", "conn", "ifaces", "vnet", "marshal", "sync"]
buffer = []
conn = ["buffer", "sync"]
ifaces = []
vnet = ["ifaces"]
marshal = []
sync = []

[dependencies]
tokio = { version = "1.32.0", features = [
    "fs",
    "io-util",
    "io-std",
    "macros",
    "net",
    "parking_lot",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
lazy_static = "1"
async-trait = "0.1"
ipnet = "2.6.0"
log = "0.4"
rand = "0.8"
bytes = "1"
thiserror = "1"
portable-atomic = "1.6"

[target.'cfg(not(windows))'.dependencies]
nix = "0.26.2"
libc = "0.2.126"

[target.'cfg(windows)'.dependencies]
bitflags = "1.3"
winapi = { version = "0.3.9", features = [
    "basetsd",
    "guiddef",
    "ws2def",
    "winerror",
    "ws2ipdef",
] }

[dev-dependencies]
tokio-test = "0.4"
env_logger = "0.11.3"
chrono = "0.4.28"
criterion = { version = "0.5", features = ["async_futures"] }
async-global-executor = "2"

[[bench]]
name = "bench"
harness = false
