[package]
name = "webrtc-util"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Utilities for WebRTC.rs stack"
license.workspace = true
documentation = "https://docs.rs/webrtc-util"
homepage.workspace = true
repository = "https://github.com/webrtc-rs/webrtc/tree/master/util"

[features]
default = ["buffer", "conn", "ifaces", "vnet", "marshal", "sync"]
buffer = []
conn = ["buffer", "sync"]
ifaces = []
vnet = ["ifaces"]
marshal = []
sync = []

[dependencies]
tokio = { version = "1.32.0", features = [
    "fs",
    "io-util",
    "io-std",
    "macros",
    "net",
    "parking_lot",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
lazy_static = "1"
async-trait = "0.1"
ipnet = "2.6.0"
log = "0.4"
rand = "0.9"
bytes = "1"
thiserror = "1"
portable-atomic = "1.6"

[target.'cfg(not(windows))'.dependencies]
nix = "0.26.2"

[target.'cfg(windows)'.dependencies]
bitflags = "1.3"
winapi = { version = "0.3.9", features = [
    "basetsd",
    "guiddef",
    "ws2def",
    "winerror",
    "ws2ipdef",
] }

[dev-dependencies]
tokio-test = { version = "0.4.4" }
env_logger = "0.11.3"
chrono = "0.4.28"
criterion = { version = "0.5", features = ["async_futures"] }

[[bench]]
name = "bench"
harness = false
