[package]
name = "webrtc"
version = "0.11.0"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2021"
description = "A pure Rust implementation of WebRTC API"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/webrtc"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/webrtc"
readme = "../README.md"

[dependencies]
data = { version = "0.9.0", path = "../data", package = "webrtc-data" }
dtls = { version = "0.10.0", path = "../dtls", package = "webrtc-dtls" }
ice = { version = "0.11.0", path = "../ice", package = "webrtc-ice" }
interceptor = { version = "0.12.0", path = "../interceptor" }
mdns = { version = "0.7.0", path = "../mdns", package = "webrtc-mdns" }
media = { version = "0.8.0", path = "../media", package = "webrtc-media" }
rtcp = { version = "0.11.0", path = "../rtcp" }
rtp = { version = "0.11.0", path = "../rtp" }
sctp = { version = "0.10.0", path = "../sctp", package = "webrtc-sctp" }
sdp = { version = "0.6.2", path = "../sdp" }
srtp = { version = "0.13.0", path = "../srtp", package = "webrtc-srtp" }
stun = { version = "0.6.0", path = "../stun" }
turn = { version = "0.8.0", path = "../turn" }
util = { version = "0.9.0", path = "../util", package = "webrtc-util" }

arc-swap = "1"
tokio = { version = "1.32.0", features = [
    "fs",
    "io-util",
    "io-std",
    "macros",
    "net",
    "parking_lot",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
log = "0.4"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
bytes = "1"
thiserror = "1"
waitgroup = "0.1"
regex = "1.9.5"
smol_str = { version = "0.2", features = ["serde"] }
url = "2"
rustls = { version = "0.23.10", default-features = false, features = ["std", "ring"] }
rcgen = { version = "0.13", features = ["pem", "x509-parser"]}
ring = "0.17"
sha2 = "0.10"
lazy_static = "1.4"
hex = "0.4"
pem = { version = "3", optional = true }
time = "0.3"
cfg-if = "1"
portable-atomic = "1.6"

[dev-dependencies]
tokio-test = "0.4"
env_logger = "0.11.3"

[features]
pem = ["dep:pem", "dtls/pem"]
openssl = ["srtp/openssl"]
vendored-openssl = ["srtp/vendored-openssl"]
