[package]
name = "webrtc"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "A pure Rust implementation of WebRTC API"
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "../README.md"

[dependencies]
data.workspace = true
dtls.workspace = true
ice.workspace = true
interceptor.workspace = true
mdns.workspace = true
media.workspace = true
rtcp.workspace = true
rtp.workspace = true
sctp.workspace = true
sdp.workspace = true
srtp.workspace = true
stun.workspace = true
turn.workspace = true
util.workspace = true

arc-swap = "1"
tokio = { version = "1.32.0", features = [
    "fs",
    "io-util",
    "io-std",
    "macros",
    "net",
    "parking_lot",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
log = "0.4"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9.1"
bytes = "1"
thiserror = "1"
waitgroup = "0.1"
regex = "1.9.5"
smol_str = { version = "0.2", features = ["serde"] }
url = "2"
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
ring = "0.17.14"
sha2 = "0.10"
lazy_static = "1.4"
hex = "0.4"
pem = { version = "3", optional = true }
portable-atomic = "1.6"
unicase = "2.8"

[dev-dependencies]
env_logger = "0.11.3"

[features]
pem = ["dep:pem", "dtls/pem"]
openssl = ["srtp/openssl"]
vendored-openssl = ["srtp/vendored-openssl"]
