[package]
name = "webrtc-data"
version = "0.3.1"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2018"
description = "A pure Rust implementation of WebRTC DataChannel API"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/webrtc-data"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/data"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { package = "webrtc-util", version = "0.5.0", default-features = false, features = ["conn", "marshal"]  }
sctp = { package = "webrtc-sctp", version = "0.4.1" }
tokio = { version = "1.12.0", features = ["full"] }
bytes = "1.0.1"
derive_builder = "0.10.2"
log = "0.4.14"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
env_logger = "0.9.0"
chrono = "0.4.19"
