[package]
name = "webrtc-data"
version = "0.3.2"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2018"
description = "A pure Rust implementation of WebRTC DataChannel API"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/webrtc-data"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/data"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { package = "webrtc-util", version = "0.5.2", default-features = false, features = ["conn", "marshal"]  }
sctp = { package = "webrtc-sctp", version = "0.4.2" }
tokio = { version = "1.13.0", features = ["full"] }
bytes = "1.1.0"
derive_builder = "0.10.2"
log = "0.4.14"
thiserror = "1.0.30"

[dev-dependencies]
tokio-test = "0.4.2"
env_logger = "0.9.0"
chrono = "0.4.19"
