[package]
name = "webrtc-ice"
version = "0.6.2"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2018"
description = "A pure Rust implementation of ICE"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/webrtc-ice"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/ice"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { package = "webrtc-util", version = "0.5.2", default-features = false, features = ["conn", "vnet", "sync"] }
mdns = { package = "webrtc-mdns", version = "0.4.1" }
stun = "0.4.1"
turn = "0.5.2"
tokio = { version = "1.13.0", features = ["full"] }
url = "2.2.2"
crc = "2.1.0"
uuid = { version = "0.8.2", features = ["v4"] }
rand = "0.8.4"
log = "0.4.14"
async-trait = "0.1.51"
waitgroup = "0.1.2"
thiserror = "1.0.30"

[dev-dependencies]
tokio-test = "0.4.2"
regex = "1.5.4"
env_logger = "0.9.0"
chrono = "0.4.19"
ipnet = "2.3.1"
clap = "2.33.3"
lazy_static = "1.4.0"
hyper = { version = "0.14.14", features = ["full"] }
sha-1 = "0.9.8"

[[example]]
name = "ping_pong"
path = "examples/ping_pong.rs"
bench = false
