[package]
name = "interceptor"
version = "0.1.3"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2018"
description = "A pure Rust implementation of Pluggable RTP/RTCP processors"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/interceptor"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/interceptor"

[dependencies]
util = { package = "webrtc-util", version = "0.4.3", default-features = false, features = ["marshal"] }
rtp = "0.4.0"
rtcp = "0.3.4"
srtp = { package = "webrtc-srtp", version = "0.4.1" }
tokio = { version = "1", features = ["sync"] }
async-trait = "0.1.42"
bytes = "1"
thiserror = "1.0.25"
anyhow = "1.0.41"
rand = "0.8.4"
