[package]
name = "interceptor"
version = "0.6.1"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2018"
description = "A pure Rust implementation of Pluggable RTP/RTCP processors"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/interceptor"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/interceptor"

[dependencies]
util = { package = "webrtc-util", version = "0.5.0", default-features = false, features = ["marshal"] }
rtp = "0.6.0"
rtcp = "0.6.0"
srtp = { package = "webrtc-srtp", version = "0.8.0" }
tokio = { version = "1.12.0", features = ["sync", "time"] }
async-trait = "0.1.51"
bytes = "1.1.0"
thiserror = "1.0"
rand = "0.8.4"
waitgroup = "0.1.2"
log = "0.4.14"

[dev-dependencies]
tokio-test = "0.4.2"
chrono = "0.4.7"
