[package]
name = "webrtc-rs-media"
version = "0.0.1"
authors = ["Rain Liu <yuliu@webrtc.rs>"]
edition = "2018"
description = "A pure Rust implementation of WebRTC Media API"
license = "MIT"
documentation = "https://docs.rs/webrtc-rs-media"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/media"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
