[package]
name = "rtcp"
version = "0.6.2"
authors = ["Rain Liu <yliu@webrtc.rs>", "Michael Uti <utimichael9@gmail.com>"]
edition = "2018"
description = "A pure Rust implementation of RTCP"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/rtcp"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/rtcp"

[dependencies]
util = { package = "webrtc-util", version = "0.5.2", default-features = false, features = ["marshal"] }
bytes = "1.1.0"
thiserror = "1.0.30"

[dev-dependencies]
tokio = { version = "1.13.0", features = ["sync"] }
tokio-test = "0.4.2"