[package]
name = "rtcp"
version = "0.6.4"
authors = ["Rain Liu <yliu@webrtc.rs>", "Michael Uti <utimichael9@gmail.com>"]
edition = "2018"
description = "A pure Rust implementation of RTCP"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/rtcp"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/rtcp"

[dependencies]
util = { package = "webrtc-util", version = "0.5.3", default-features = false, features = ["marshal"] }
bytes = "1.1.0"
thiserror = "1.0.30"

[dev-dependencies]
tokio = { version = "1.15.0", features = ["sync"] }
tokio-test = "0.4.2"